# fem_test_resolve

./: .gitignore  CMakeLists.txt  README.md  fix_rhs.sh  main.cpp
data/demo/: dof_coordinate.txt
data/demo/systems/: A_NS_0000.mtx  A_NS_0001.mtx  A_NS_0002.mtx  A_NS_0003.mtx  A_NS_0004.mtx  A_NS_0005.mtx  A_NS_0006.mtx  A_NS_0007.mtx  A_NS_0008.mtx  A_NS_0009.mtx  A_NS_0010.mtx  A_NS_0011.mtx  A_NS_0012.mtx  A_NS_0013.mtx  A_NS_0014.mtx  A_NS_0015.mtx  A_NS_0016.mtx  A_NS_0017.mtx  A_NS_0018.mtx  A_NS_0019.mtx  A_NS_0020.mtx  A_NS_0021.mtx  A_NS_0022.mtx  A_NS_0023.mtx  A_NS_0024.mtx  A_NS_0025.mtx  A_NS_0026.mtx  A_NS_0027.mtx  A_NS_0028.mtx  A_NS_0029.mtx  A_NS_0030.mtx  A_NS_0031.mtx  A_NS_0032.mtx  A_NS_0033.mtx  A_NS_0034.mtx  A_NS_0035.mtx  A_NS_0036.mtx  A_NS_0037.mtx  A_NS_0038.mtx  A_NS_0039.mtx  (+162 more)
examples/cavity/: args.txt
examples/demo/: args.txt
helper/: ExampleHelper.hpp
postprocess/: config.yaml  visualize_pointcloud.py
postprocess/speedup/: main.py
postprocess/velocityplot/: config.yaml  main.py
postprocess/velocityplot/reference/: u_x_0.csv  v_y_0.csv
postprocess/visualize/: config.yaml
script/: build.sh  fix_rhs.sh
src/: main.cpp
src/helper/: ExampleHelper.hpp
